--- a/index.html
+++ b/index.html
@@ -1015,6 +1015,10 @@
 </html>
 <!-- partial -->
   <script  src="./script.js"></script>
+    <script src="./script.js"></script>
+    <!-- Tidio Chat Widget -->
+    <script src="//code.tidio.co/ke4gb7qpm9ceqeewjemzgp.js" async></script>
+</body>
 
 </body>
 </html>
