Add aria label for mobile menu

--- a/index.html
+++ b/index.html
@@ -645,7 +645,8 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
-      <button class="mobile-menu-btn">☰</button>
+      <!-- The mobile menu toggle button was missing an accessible label. -->
+      <button class="mobile-menu-btn" aria-label="Open main menu">☰</button>
     </div>
   </header>
 
