--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
   <meta property="og:url" content="https://alphaclone.ai">
   <meta property="og:image" content="https://alphaclone.ai/assets/og-image.jpg">
   <meta name="twitter:card" content="summary_large_image">
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🤖</text></svg>">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💠🤖</text></svg>">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
---primary: #0d9488; /* Updated teal for better contrast */
+    :root {
+      --primary: #0d9488; /* Updated teal for better contrast */
       --primary-dark: #0f766e;
       --primary-light: #ccfbf1;
       --dark: #111827;
